- Display MLTextInput value when PDF or no edit allowed in Inputs.php
- Portal Assignments in Portal.php
- create Linkify() function in ProgramFunctions/Linkify.fnc.php
- Reorganize Report Cards comments display in ReportCards.php
- bugfix ListOutput sorting & remove yscroll LO_option in ListOutput.fnc.php
- Add rollover_warnings action in Actions.php & Moodle/functions.php

Upgrade from 2.7.x
------------------
- Extract the 2.8 files
- Execute the SQL commands, see https://gist.github.com/francoisjacquet/b451c8006d5e1978fb0d
- Note: you can activate Registration via School Setup > School Configuration


Changes in 2.7.4
----------------
- Bugfix cannot create calendar after adding new school in Calendar.php

Changes in 2.7.3
----------------
- Bugfix SQL error invalid input syntax for type numeric in InputFinalGrades.php & Courses.php
- Bugfix SQL error unterminated quoted identifier in InputFinalGrades.php
- Bugfix SQL error column "period_id" does not exist in UnfilledRequests.php

Changes in 2.7.2
----------------
- Bugfix SQL error more than one row returned by a subquery used as an expression in Export.php
- Rollback select all the course periods (for all the selected mps) of the same course in InputFinalGrades.php

Changes in 2.7.1
----------------
- Add widget & hide + remove cellpadding-0/1/2/3/4/6 CSS classes, programwide
- Add check wkhtmltopdf binary exists in diagnostic.php
- Remove inline CSS in index.php & Address.inc.php
- Bugfix SQL error more than one row returned by a subquery used as an expression in GetStuList.fnc.php (Fix #92)
- Bugfix display Moodle rollover error only if rolled once in Moodle/functions.php

Changes in 2.7
--------------
- Remove $RosarioAdmins list in config.inc.php
- Move $RosarioModules to database CONFIG table
- Bigger config values capacity to accept serialized variables in rosariosis.sql
- Remove $RosarioModules + MOODLE_INTEGRATOR in config.inc.php
- Add SendEmail function