@@ -42,6 +42,7 @@ Changes in 2.8
 - Reorganize Report Cards comments display in ReportCards.php
 - bugfix ListOutput sorting & remove yscroll LO_option in ListOutput.fnc.php
 - Add rollover_warnings action in Actions.php & Moodle/functions.php
+- Detect IP behind Proxy in HackingLog.fnc.php & User.php
 
 Upgrade from 2.7.x
 ------------------
